<resources>
    <string name="app_name">KickstarterDashboard</string>

    <!-- User friendly error messages -->
    <string name="project_list_is_null_exception">No projects found</string>
    <string name="json_parsing_error_title">Error parsing data from response</string>
    <string name="unknown_error_message">Unknown error</string>

    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>

    <string name="project_item_pledge_label">Pledge</string>
    <string name="project_item_backers_label">Backers</string>
    <string name="project_item_days_left_label">Days left</string>

    <!--  Menu actions -->
    <string name="action_search">Search</string>
    <string name="search_project_hint">Project title</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_alphabetically">Sort alphabetically</string>
    <string name="action_sort_remain_time">Sort by time</string>
    <string name="action_filter_by_backers">Filter</string>

    <string name="range_input_from_hint">From</string>
    <string name="range_input_to_hit">To</string>
</resources>
