<?xml version="1.0" encoding="utf-8"?>
<com.eexposito.kickstarterdashboard.ui.IntRangePickerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface">

    <EditText
        android:id="@+id/fromInputText"
        style="@style/Text.OnSurface.SubHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tiny"
        android:hint="@string/range_input_from_hint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toInputText"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/toInputText"
        style="@style/Text.OnSurface.SubHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tiny"
        android:hint="@string/range_input_to_hit"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/filterActionButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/fromInputText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filterActionButton"
        style="@style/Text.OnSurface.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_tiny"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:text="@string/action_filter_by_backers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toInputText"
        app:layout_constraintTop_toTopOf="parent" />
</com.eexposito.kickstarterdashboard.ui.IntRangePickerView>
